index.html: buttons aren't supposed to contain p tags, switched this to span, buttons aren't supposed to contain div tags, switched this to span. | projects_script.js: added missing semicolon. | projects_style.css: added slight transition delay to make card effect sleek. | style.css: removed redundant background-color, removed redundant unit definition for 0 in box-shadow, attempted a fix at a hovering button by changing it's positioning,  made the cursor switch to pointer when hovering over discord logo,  added missing unit definer for top, attempted to make layout more responsive by defining units as % instead of px (mispositioned on smaller screens), reduced code lines by consolidating an expanded transformation, removed non-existent background variable set,  changed z-index to a positive value to prevent awkward clipping, attempted a layout fix by repositioning button, removed redundant unit definer on a 0, changed layout switch to tablets in an effort to make the discord button work a little better,  removed the discord button on tablets and smaller devices, made the about me section move down on smaller devices so that the navbar doesn't get in the way, removed redundant bottom styler without any defined unit.

--- a/projects/projects_style.css
+++ b/projects/projects_style.css
@@ -57,6 +57,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition-delay: 0.1s;
 }
 
 /* Hover Effect */
